@@ -3,6 +3,7 @@ Microsoft Visual Studio Solution File, Format Version 10.00
 # Visual Studio 2008
 Project("{2150E333-8FDC-42A3-9474-1A3956D46DE8}") = "Solution Items", "Solution Items", "{8C53C104-3557-4C1A-B653-C4E6C46DB48E}"
 	ProjectSection(SolutionItems) = preProject
+		BreakingChanges.txt = BreakingChanges.txt
 		Changes-logging.txt = Changes-logging.txt
 		Changes.txt = Changes.txt
 		License.txt = License.txt
